@@ -478,13 +478,13 @@ Está seguro?</translation>
 <context>
     <name>qjackctlGraphCanvas</name>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1806"/>
-        <location filename="../qjackctlGraph.cpp" line="1935"/>
+        <location filename="../qjackctlGraph.cpp" line="1816"/>
+        <location filename="../qjackctlGraph.cpp" line="1943"/>
         <source>Connect</source>
         <translation>Conectar</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="2007"/>
+        <location filename="../qjackctlGraph.cpp" line="2015"/>
         <source>Disconnect</source>
         <translation>Desconectar</translation>
     </message>
