@@ -479,13 +479,13 @@ de toutes les applications clientes.
 <context>
     <name>qjackctlGraphCanvas</name>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1806"/>
-        <location filename="../qjackctlGraph.cpp" line="1935"/>
+        <location filename="../qjackctlGraph.cpp" line="1816"/>
+        <location filename="../qjackctlGraph.cpp" line="1943"/>
         <source>Connect</source>
         <translation>Connecter</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="2007"/>
+        <location filename="../qjackctlGraph.cpp" line="2015"/>
         <source>Disconnect</source>
         <translation>Déconnecter</translation>
     </message>
