@@ -479,13 +479,13 @@ Are you sure?</source>
 <context>
     <name>qjackctlGraphCanvas</name>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1806"/>
-        <location filename="../qjackctlGraph.cpp" line="1935"/>
+        <location filename="../qjackctlGraph.cpp" line="1816"/>
+        <location filename="../qjackctlGraph.cpp" line="1943"/>
         <source>Connect</source>
         <translation>연결하기</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="2007"/>
+        <location filename="../qjackctlGraph.cpp" line="2015"/>
         <source>Disconnect</source>
         <translation>연결해제</translation>
     </message>
